# tmpl8advgr

./: .gitignore  CMakeLists.txt  README.md  _readme.txt  game.cpp  game.h  surface.cpp  template.cpp  template.h  tmpl_advgr.vcxproj
lib/FreeImage/: CMakeLists.txt
lib/imgui/: CMakeLists.txt  imgui_impl_glfw.cpp
